# kove

./: .claudeignore  .clineignore  .dev.vars.example  .env.example  .geminiignore  .gitattributes  .gitignore  .ignore  .kimiignore  .npmrc  5july2026foldertree.md  AGENT-MASTER-PLAN.md  AGENTS.md  ALL-PIPELINES-FULL-CODE.md  ALPHA-LOOP-RUNTIME-VERIFY.md  CHAT-STATE-COLLAPSE-VERIFY.md  CHAT-THREAD-MIGRATION-AUDIT.md  CLAUDE.md  CODEBEHIND.md  Dockerfile  EDL-GENERATOR-FIX.md  EXPORT-PARITY-AUDIT.md  EXPORT-PARITY-RUNTIME-VERIFY.md  FRONTEND-FULL-UNIFICATION-VERIFY.md  FRONTEND-MIGRATION-AUDIT.md  FRONTEND-UNIFICATION-QA.md  FULL-CODEBASE-DUMP.md  GEMINI.md  GENERATION-ORCHESTRATOR-VERIFY.md  GOAL.md  KOVE-ALL-FILES.md  PIPELINE-E2E-ALL-CODE.md  PIPELINE-E2E.md  PLAN.md  PRODUCTION-RESILIENCE.md  PROJECT-CONTEXT-ZUSTAND-VERIFY.md  README.md  REFERENCE-ALPHA-LOOP-RUNTIME-VERIFY.md  REFERENCE-ANALYZER-V2-VERIFY.md  REFERENCE-QUALITY-BENCHMARK.md  (+45 more)
.github/: copilot-instructions.md
benchmark-outputs/: run-01-edl.json  run-02-edl.json  run-03-edl.json  run-04-edl.json  run-05-edl.json  run-06-edl.json  run-08-edl.json  run-09-edl.json
brain/: architecture_blueprint.md  license_manifest.json  license_manifest.schema.json
docs/: BUG-FIX-VERIFICATION.md  DEEP-ANALYSIS-REFACTOR.md  DEEP-ANALYSIS-RUNTIME-VERIFY.md  ENGINE-PIPELINE.md  STYLE-REPLICATION-IMPLEMENTATION.md  (+6 more)
workers/python-content-analyzer/: pyproject.toml
workers/python-content-analyzer/src/: analyzer.py  models.py  semantic.py
workers/python-content-analyzer/tests/: test_analyzer.py  test_models.py  test_semantic.py
workers/python-director/: pyproject.toml
workers/python-director/src/: content_analyzer.py  creative_planner.py  critic.py  director.py  intent_decoder.py  json_utils.py  llm_client.py  music_analyzer.py  reference_engine.py  server.py  style_transfer.py  style_transfer_engine.py
workers/python-director/src/prompts/: create-moments.txt  critique-edl.txt  decode-intent.txt  extract-style.txt  generate-story-arc.txt
workers/python-director/src/python_director.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workers/python-director/tests/: test_creative_planner.py  test_critic.py  test_director.py  test_e2e.py  test_intent_decoder.py  test_schema_compat.py  test_server.py  test_style_transfer.py
workers/python-music-analyzer/: pyproject.toml
workers/python-music-analyzer/src/: analyzer.py  beat_detection.py  energy_analysis.py  models.py  onset_detection.py  section_segmentation.py
workers/python-music-analyzer/tests/: test_analyzer.py  test_beat_detection.py  test_models.py
(+1283 files in other folders)
