[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "python-content-analyzer"
version = "0.1.0"
description = "Content analyzer stub for Monet AI video editor"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "google-generativeai>=0.8.0",
    "opencv-python-headless>=4.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
