[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-director"
version = "0.1.0"
description = "AI Director service — intent decoding, creative planning, critique, style transfer"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "google-generativeai>=0.8.0",
    "fastapi>=0.100.0",
    "python-multipart>=0.0.5",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
