[project]
name = "python-music-analyzer"
version = "0.1.0"
description = "Music analysis service for Monet AI"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "librosa>=0.10.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
